<resources>
    <string name="app_name">Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="custom_caps">CUSTOM CAPS</string>
    <string name="signup">Регистрация</string>
    <string name="signup_et_name">Имя</string>
    <string name="signup_et_phone">Номер телефона</string>
    <string name="signup_et_password">Пароль</string>
    <string name="signup_et_password2">Подтвердите пароль</string>
    <string name="or">или</string>
    <string name="got_account">Уже есть аккаунт?</string>
    <string name="sign_in">Войти</string>
    <string name="register">Регистрация</string>
    <string name="store_caps">Магазин кепок</string>
    <string name="not_signed_up_yet">Еще не зарегистрированы?</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="restore">Восстановить</string>
    <string name="password_recovery">Восстановить пароль</string>
    <string name="number_test">+ 996 788 999 555</string>
    <string name="text_in_password_recovery">Введите номер, указанный при регистрации. Вам будет отправлен код подтверждения</string>
    <string name="send">Отправить</string>
    <string name="instruction_for_token">Введите 6 значный код, отправленный на номер +996 788 999 666</string>
    <string name="create_new_password">Введите новый пароль</string>
    <string name="accept_new_password">Подтвердите новый пароль</string>
    <string name="search">Поиск</string>
    <string name="new_era">New Era</string>
    <string name="brightest_2021_collection">Самая яркая коллекция 2021</string>
    <string name="popular_brands">Популярные Бренды</string>
    <string name="adidas">Adidas</string>
    <string name="watch_all">Смотреть все</string>
    <string name="san_francisco_baseball">San Francisco Baseball</string>
    <string name="new_price">3800 сом</string>
    <string name="promotions">Акции</string>
    <string name="old_price"> <strike> 4600 сом </strike> </string>
    <string name="supreme_new_era"><![CDATA[Supreme & New Era]]></string>
    <string name="collaborations">collaborations</string>
    <string name="catalogue">Каталог</string>
    <string name="name_cap">Golden State Warriors Icon 59FIFTY Fitted Cap</string>
    <string name="price">2500 сом</string>
    <string name="sizes">Размеры</string>
    <string name="describe">Кепка Golden State Warriors Icon 59FIFTY Fitted Cap имеет вышитый логотип Warriors на передних панелях, а также надпись World Champs с дополнительными командными нашивками и вышивкой по всей остальной части короны. Дополнительные детали включают цветной логотип NBA команды сзади и серый нижний слой.</string>
    <string name="basket">Корзина</string>
    <string name="golden_state_warriors_icon">Golden State Warriors Icon</string>
    <string name="_59fifty_fitted_cap">59FIFTY Fitted Cap</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="m">M</string>
    <string name="sum">Сумма</string>
    <string name="delivery">Доставка</string>
    <string name="_2750">2750 сом</string>
    <string name="_250">250 сом</string>
    <string name="purchase">Купить</string>
    <string name="to_home">На главную</string>
    <string name="will_contact_you_soon">Ожидайте, очень скоро с Вами свяжутся.</string>
    <string name="order_registered">Ваш заказ принят.</string>
    <string name="email">Email</string>
    <string name="check_email">Вы успешно зарегестрировались, пожалуйста, проверьте почту</string>
    <string name="name">Имя</string>
    <string name="my_account">Мой аккаунт</string>
    <string name="profile">Профиль</string>
    <string name="my_orders">Мои заказы</string>
    <string name="address">Адрес</string>
    <string name="order_details">Детали заказа</string>
    <string name="edit_profile">Редактировать профииль</string>
    <string name="marat_nurmamatov">Marat Nurmamatov</string>
    <string name="manurmanatov_gmail_com">manurmanatov@gmail.com</string>
</resources>