<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.sign_in.SignInFragment">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/margin_83"
            android:layout_height="@dimen/margin_66"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_46"
            android:src="@drawable/ic_custom_caps"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_sign_in"
            style="@style/top_tv_large"
            android:layout_below="@id/iv_logo"
            android:layout_marginTop="@dimen/margin_38"
            android:text="@string/sign_in" />

        <View
            android:id="@+id/divider"
            style="@style/divider"
            android:layout_width="match_parent"
            android:layout_below="@id/tv_sign_in"
            android:layout_marginHorizontal="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_40" />

        <EditText
            android:id="@+id/et_sign_in_phone"
            style="@style/et_signup"
            android:layout_below="@id/divider"
            android:layout_marginTop="@dimen/margin_28"
            android:autofillHints="phone"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/signup_et_phone"
            android:inputType="phone"
            android:maxLength="16"
            android:textColor="@color/label_black_100"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_sign_in_password"
            style="@style/et_signup"
            android:layout_below="@id/et_sign_in_phone"
            android:layout_marginTop="@dimen/margin_10"
            android:autofillHints="password"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/signup_et_password"
            android:inputType="textPassword"
            android:textColor="@color/label_black_100"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lin_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_sign_in_password"
            android:layout_marginHorizontal="@dimen/margin_33"
            android:layout_marginTop="@dimen/margin_20"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/not_signed_up_yet"
                android:textAlignment="textStart"
                android:textColor="@color/regular_gray"
                android:textSize="@dimen/size_14" />

            <TextView
                android:id="@+id/tv_sign_up"
                style="@style/tv_clickable"
                android:layout_weight="1"
                android:text="@string/signup"
                android:textSize="@dimen/size_14" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lin_layout_1"
            android:layout_marginHorizontal="@dimen/margin_33"
            android:layout_marginTop="@dimen/margin_26"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_password"
                android:textAlignment="textStart"
                android:textColor="@color/regular_gray"
                android:textSize="@dimen/size_14" />

            <TextView
                android:id="@+id/tv_restore"
                style="@style/tv_clickable"
                android:layout_weight="1"
                android:text="@string/restore"
                android:textSize="@dimen/size_14" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_in"
            style="@style/btn_light"
            android:layout_below="@id/lin_layout_2"
            android:layout_marginHorizontal="@dimen/margin_77"
            android:layout_marginTop="@dimen/margin_96"
            android:text="@string/sign_in" />

        <LinearLayout
            android:id="@+id/lin_layout_3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_24"
            android:layout_below="@id/btn_sign_in"
            android:layout_marginHorizontal="@dimen/margin_52"
            android:layout_marginTop="@dimen/margin_46"
            android:orientation="horizontal"
            android:weightSum="3">

            <View
                style="@style/divider"
                android:layout_width="@dimen/margin_100"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/regular_gray"
                android:textSize="@dimen/size_16" />

            <View
                style="@style/divider"
                android:layout_width="@dimen/margin_100"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_layout_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lin_layout_3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_42"
            android:layout_marginBottom="@dimen/margin_20"
            android:orientation="horizontal"
            android:padding="@dimen/margin_5">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_sign_in_facebook"
                style="@style/fab_fb_ggl"
                android:src="@drawable/ic_facebook"
                app:borderWidth="@dimen/margin_0"
                app:elevation="@dimen/margin_0"
                tools:ignore="ContentDescription" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_sign_in_google"
                style="@style/fab_fb_ggl"
                android:layout_marginStart="@dimen/margin_16"
                android:src="@drawable/ic_google"
                app:borderWidth="@dimen/margin_0"
                app:elevation="@dimen/margin_0"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>