<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.start.StartFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image_start" />

    <ImageView
        android:id="@+id/custom_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_46"
        android:src="@drawable/ic_custom_caps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/custom_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_21"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/custom_caps"
        android:textColor="@color/white"
        android:textFontWeight="800"
        android:textSize="@dimen/size_36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_iv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_21"
        android:layout_marginTop="@dimen/margin_8"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/store_caps"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_btn"
        android:layout_marginBottom="@dimen/margin_10"
        app:cornerRadius="@dimen/margin_21"
        app:backgroundTint="@color/white"
        android:paddingVertical="@dimen/margin_16"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/register_btn"
        android:layout_marginHorizontal="@dimen/margin_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_40"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/black_with_alfa"
        android:fontFamily="@font/sf_ui_text_regular"
        android:paddingVertical="16dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textFontWeight="700"
        android:textSize="@dimen/size_16"
        app:cornerRadius="@dimen/margin_21"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="UnusedAttribute" />


</androidx.constraintlayout.widget.ConstraintLayout>