<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="@dimen/margin_8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_1"
        android:layout_width="@dimen/margin_150"
        android:layout_height="@dimen/margin_150"
        android:backgroundTint="@color/light_gray"
        app:cardCornerRadius="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="@dimen/margin_107"
            android:layout_height="@dimen/margin_71"
            android:layout_gravity="center"
            android:src="@drawable/ic_product"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_brand_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_1"
        android:layout_marginTop="@dimen/margin_10"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/adidas"
        android:textColor="@color/label_black_100"
        android:textSize="@dimen/size_12"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_1" />

    <ImageView
        android:id="@+id/iv_like"
        android:layout_width="@dimen/margin_18"
        android:layout_height="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_1"
        android:src="@drawable/ic_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_1"
        android:layout_marginTop="@dimen/margin_4"
        android:text="@string/san_francisco_baseball"
        android:textColor="@color/label_black_30"
        android:textSize="@dimen/size_10"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_brand_name" />

    <TextView
        android:id="@+id/tv_old_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_price"
        android:layout_marginTop="@dimen/margin_4"
        android:textColor="@color/gray_3"
        android:fontFamily="@font/sf_ui_text_regular"
        android:textSize="@dimen/size_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_product_name"
        />

    <TextView
        android:id="@+id/tv_new_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_4"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/new_price"
        android:textColor="@color/yellow"
        android:textSize="@dimen/size_14"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_old_price"
        app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

</androidx.constraintlayout.widget.ConstraintLayout>